log
Thu, May 15, 2025 11:57:31 AM: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Thu, May 15, 2025 11:58:03 AM: 
 tests:  0|5
total_score: 0/70
b134480
Thu, May 15, 2025 12:57:32 PM: 
 sudoku.c | 46 +++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 41 insertions(+), 5 deletions(-)
Compilation failed
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
test.c:245:5: error: redefinition of 'main'
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:104:5: note: previous definition of 'main' with type 'int(int,  char **)'
  104 | int main( int argc, char *argv[] ){
      |     ^~~~
b13039b
Thu, May 15, 2025 12:58:09 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
ad3ee6c
